--- a/Components/App.razor
+++ b/Components/App.razor
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="Blazor_Inventory.styles.css" />
+    <link rel="stylesheet" href="tailwind-app.css" />
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Sharp|Material+Icons+Round|Material+Icons+Two+Tone" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
