--- a/Styles/tailwind-app.css
+++ b/Styles/tailwind-app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .user-menu-entering:start {
+        @apply transform opacity-0 scale-95
+    }
+    .user-menu-entering:end {
+        @apply transform opacity-100 scale-100
+    }
+    .user-menu-leaving:start {
+        @apply transform opacity-100 scale-100
+    }
+    .user-menu-leaving:end {
+        @apply transform opacity-0 scale-95
+    }
+}
