--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -2,3 +2,47 @@
 
 <PageTitle>Home</PageTitle>
 
+<section class="bg-white dark:bg-gray-900">
+    <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:pt-16 lg:pb-4 lg:px-6">
+        <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Primo sito di prova con Blazor</h2>
+            <p class="mb-4">Benvenuto! Questo è il mio primo progetto con Blazor, un framework che mi
+                permette di utilizzare C# per creare applicazioni web interattive. Con questa app, voglio mettere in
+                pratica le mie conoscenze e sperimentare le potenzialità di Blazor.</p>
+            <p>L'app che ho creato ha lo scopo di gestire un inventario in modo semplice. Potrai
+                aggiungere, modificare ed eliminare elementi, tenere traccia delle quantità.</p>
+        </div>
+        <div class="grid grid-cols-2 gap-4 mt-8">
+            <img class="w-full rounded-lg"
+                src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/content/office-long-2.png"
+                alt="office content 1">
+            <img class="mt-4 w-full lg:mt-10 rounded-lg"
+                src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/content/office-long-1.png"
+                alt="office content 2">
+        </div>
+    </div>
+</section>
+<section class="flex bg-white dark:bg-gray-900 text-center">
+    <div class="py-8 px-4 mx-auto max-w-screen-xl sm:pt-4 sm:pb-8 lg:px-6">
+        <div class="max-w-screen-md">
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Non sei ancora loggato.</h2>
+            <p class="mb-8 font-light text-gray-500 sm:text-xl dark:text-gray-400">Affinché l'applicazione possa funzionare correttamente è necessario
+                loggarsi tramite account Google che scelgo di usare per semplicità avendoci già avuto a che fare.
+            </p>
+            <div class="flex flex-col justify-center space-y-4 sm:flex-row sm:space-y-0 sm:space-x-4">
+                <a href="#" class="inline-flex items-center justify-center px-4 py-2.5 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+                    <svg class="mr-2 w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M12.037 21.998a10.313 10.313 0 0 1-7.168-3.049 9.888 9.888 0 0 1-2.868-7.118 9.947 9.947 0 0 1 3.064-6.949A10.37 10.37 0 0 1 12.212 2h.176a9.935 9.935 0 0 1 6.614 2.564L16.457 6.88a6.187 6.187 0 0 0-4.131-1.566 6.9 6.9 0 0 0-4.794 1.913 6.618 6.618 0 0 0-2.045 4.657 6.608 6.608 0 0 0 1.882 4.723 6.891 6.891 0 0 0 4.725 2.07h.143c1.41.072 2.8-.354 3.917-1.2a5.77 5.77 0 0 0 2.172-3.41l.043-.117H12.22v-3.41h9.678c.075.617.109 1.238.1 1.859-.099 5.741-4.017 9.6-9.746 9.6l-.215-.002Z" clip-rule="evenodd"/>
+                    </svg>
+                    Inizia Subito
+                </a>
+                <a href="#" class="inline-flex items-center justify-center px-4 py-2.5 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+                    <svg class="mr-2 w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                    </svg>
+                    Maggiori Dettagli
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
