--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,4 +9,5 @@
 @using Blazor_Inventory
 @using Blazor_Inventory.Components
 @using Blazor_Inventory.Components.Layout
+@using Blazor_Inventory.Components.Pages.InventoryParts
 @using BlazorMaterialIcons
