--- a/Components/Pages/Manage.razor
+++ b/Components/Pages/Manage.razor
@@ -1,3 +1,29 @@
 @page "/admin"
 
 <div class="text-center">ADMINS</div>
+
+<EditForm FormName="InventoryItem" Model="item" OnSubmit="HandleSubmit">
+    <div class="grid gap-6 mb-6 md:grid-cols-2">
+        <div>
+            <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First
+                name</label>
+            <input type="text" id="first_name"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="John" required />
+        </div>
+        <div>
+            <label for="last_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last
+                name</label>
+            <input type="text" id="last_name"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Doe" required />
+        </div>
+    </div
+    <input type="submit"/>
+</EditForm>
+
+@code {
+    private InventoryItem item = new InventoryItem();
+
+    private void HandleSubmit(EditContext editContext) {
+        Console.WriteLine();
+    }
+}
